[package]
name = "ollamactl"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1"
tinytemplate = "1.1"
anyhow = "1.0.81"
clap = "2.33.3"
ignore = "0.4"
ollama-rs = "0.1.7"
qdrant-client = "1.8.0"
serde_json = "1.0.114"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tonic = "0.11.0"
