[package]
name = "nvim-llama-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "nvllamactl"
path = "src/bin/nvllamactl.rs"
doc = false

[dependencies]
nvim-llama-constants = { version = "0.1", path = "../constants" }
nvim-llama-ollama = { version = "0.1", path = "../ollama" }
nvim-llama-openai-client = { version = "0.1", path = "../openai" }

serde = "1"
tinytemplate = "1.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde_json = "1.0.114"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tonic = "0.11.0"
