[package]
name = "nvim-llama-qdrant"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
nvim-llama-constants = { version = "0.1", path = "../constants" }
qdrant-client = "1.8"
anyhow = { version = "1.0" }
serde_json = "1.0.114"
